--- a/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles.approved.adoc
@@ -9,8 +9,28 @@ The queue size is incremented only with a new building.
 |====
 | Building asked | Queue size
 
-| model.building.warehouse | 1
-| model.building.warehouse | 1
-| model.building.church | 2
-| model.building.warehouse | 2
+a| 
+image::../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[]
+ a| 
+image::../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[]
+
+a| 
+image::../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[]
+ a| 
+image::../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[]
+
+a| 
+image::../../../../../../../data/rules/classic/resources/images/buildings/church.png[]
+ a| 
+image::../../../../../../../data/rules/classic/resources/images/buildings/church.png[]
+ 
+image::../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[]
+
+a| 
+image::../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[]
+ a| 
+image::../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[]
+ 
+image::../../../../../../../data/rules/classic/resources/images/buildings/church.png[]
+
 |====
