--- a/test/docs/net/sf/freecol/common/model/_ColonyDocTest.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_ColonyDocTest.approved.adoc
@@ -6,4 +6,6 @@ include::_ColonyDocTest.testCurrentlyBuilding.approved.adoc[leveloffset=+1]
 
 include::_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles.approved.adoc[leveloffset=+1]
 
+include::_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles_Basic.approved.adoc[leveloffset=+1]
+
 include::_ColonyDocTest.testBuildQueueAcceptsUnitDoubles.approved.adoc[leveloffset=+1]
