Add collapsible zone for initial data

--- a/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueAcceptsUnitDoubles.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueAcceptsUnitDoubles.approved.adoc
@@ -7,6 +7,12 @@ Build queue is incremented when building an other item.
 
 Initial currently building: *model.building.warehouse* +
 
+.Standard colony
+[%collapsible]
+====
+image:../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[title="model.building.warehouse"]
+====
+
 |====
 | Building asked | Queue size
 
@@ -19,3 +25,4 @@ a| image:../../../../../../../data/rules/classic/resources/images/units/wagon/wa
 image:../../../../../../../data/rules/classic/resources/images/units/wagon/wagonTrain.png[title="model.unit.wagonTrain"]
 image:../../../../../../../data/rules/classic/resources/images/buildings/warehouse.png[title="model.building.warehouse"]
 |====
+
