--- a/test/docs/net/sf/freecol/common/model/_ColonyDocTest.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_ColonyDocTest.approved.adoc
@@ -1,4 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
 
 = Colony doc test
 
