Format test on stock requires minimal population

--- a/test/docs/net/sf/freecol/common/model/_BuildingDocTest.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_BuildingDocTest.approved.adoc
@@ -4,3 +4,5 @@ ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
 = Building doc test
 
 include::_BuildingDocTest.testCanBuildNext.approved.adoc[leveloffset=+1]
+
+include::_BuildingDocTest.testStockadeRequiresMinimumPopulation.approved.adoc[leveloffset=+1]
