--- a/test/docs/net/sf/freecol/common/model/_MapDocTest.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_MapDocTest.approved.adoc
@@ -8,3 +8,7 @@ include::_MapDocTest.testMapGameInt.approved.adoc[leveloffset=+1]
 include::_MapDocTest.testGetSurroundingTiles.approved.adoc[leveloffset=+1]
 
 include::_MapDocTest.testGetReverseDirection.approved.adoc[leveloffset=+1]
+
+include::_MapDocTest.testNoPathAvailableDueToCampInTheWay.approved.adoc[leveloffset=+1]
+
+include::_MapDocTest.testShortestPathObstructed.approved.adoc[leveloffset=+1]
