Complete test with doc

--- a/test/docs/net/sf/freecol/common/model/_MapDocTest.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_MapDocTest.approved.adoc
@@ -12,3 +12,7 @@ include::_MapDocTest.testGetReverseDirection.approved.adoc[leveloffset=+1]
 include::_MapDocTest.testNoPathAvailableDueToCampInTheWay.approved.adoc[leveloffset=+1]
 
 include::_MapDocTest.testShortestPathObstructed.approved.adoc[leveloffset=+1]
+
+include::_MapDocTest.testSearchForColony.approved.adoc[leveloffset=+1]
+
+include::_MapDocTest.testLatitude.approved.adoc[leveloffset=+1]
