Add doc as test on Map

--- a/test/docs/net/sf/freecol/common/model/_MapDocTest.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_MapDocTest.approved.adoc
@@ -16,3 +16,5 @@ include::_MapDocTest.testShortestPathObstructed.approved.adoc[leveloffset=+1]
 include::_MapDocTest.testSearchForColony.approved.adoc[leveloffset=+1]
 
 include::_MapDocTest.testLatitude.approved.adoc[leveloffset=+1]
+
+include::_MapDocTest.testFindPath.approved.adoc[leveloffset=+1]
