--- a/test/docs/net/sf/freecol/common/model/_BuildingDocTest.testStockadeRequiresMinimumPopulation.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_BuildingDocTest.testStockadeRequiresMinimumPopulation.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_common_model_buildingdoctest_teststockaderequiresminimumpopulation]
 = TestStockadeRequiresMinimumPopulation
@@ -11,3 +11,5 @@ ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
 |2|POPULATION_TOO_SMALL
 |3|NONE
 |====
+
+
