--- a/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles_Original.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles_Original.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_common_model_colonydoctest_testbuildqueuedoesnotacceptbuildingdoubles_original]
 = TestBuildQueueDoesNotAcceptBuildingDoubles Original
@@ -30,3 +30,5 @@ ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
                      2, colony.getBuildQueue().size());
     
 ----
+
+
