--- a/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles_Basic.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles_Basic.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_common_model_colonydoctest_testbuildqueuedoesnotacceptbuildingdoubles_basic]
 = TestBuildQueueDoesNotAcceptBuildingDoubles Basic
@@ -22,3 +22,4 @@ a| 2
 a| model.building.warehouse
 a| 2
 |====
+
