--- a/test/docs/net/sf/freecol/server/model/_ServerIndianSettlementFoodDocTest.testFoodConsumption_3.approved.adoc
+++ b/test/docs/net/sf/freecol/server/model/_ServerIndianSettlementFoodDocTest.testFoodConsumption_3.approved.adoc
@@ -1,10 +1,10 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_server_model_serverindiansettlementfooddoctest_testfoodconsumption_3]
 = TestFoodConsumption 3
 
-Mise en forme
+Mise en forme.
 
 UnitCount:1
 
@@ -18,6 +18,8 @@ GoodsCount for *food*: 0
 |10|2|8
 |====
 
+
+foodProduced > foodConsumed
 
 new turn
 
