--- a/test/docs/net/sf/freecol/server/model/_ServerIndianSettlementFoodDocTest.testFoodConsumption_5.approved.adoc
+++ b/test/docs/net/sf/freecol/server/model/_ServerIndianSettlementFoodDocTest.testFoodConsumption_5.approved.adoc
@@ -1,10 +1,10 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_server_model_serverindiansettlementfooddoctest_testfoodconsumption_5]
 = TestFoodConsumption 5
 
-Ajouter des images
+Ajouter des images.
 
 UnitCount:1
 
