--- a/test/docs/net/sf/freecol/common/model/_MapDocTest.testGetReverseDirection.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_MapDocTest.testGetReverseDirection.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_common_model_mapdoctest_testgetreversedirection]
 = TestGetReverseDirection
@@ -17,3 +17,5 @@ ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
 |W|E
 |NW|SE
 |====
+
+
