--- a/test/docs/net/sf/freecol/common/model/_MapDocTest.testGetSurroundingTiles.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_MapDocTest.testGetSurroundingTiles.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_common_model_mapdoctest_testgetsurroundingtiles]
 = TestGetSurroundingTiles
@@ -17,4 +17,6 @@ there is 24 tiles.
 
 Get surrounding tile of the tile 4x8 with a range 10
 there is 149 tiles.
+
+
 
