--- a/test/docs/net/sf/freecol/common/model/_MapDocTest.testMapGameInt.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_MapDocTest.testMapGameInt.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_common_model_mapdoctest_testmapgameint]
 = TestMapGameInt
@@ -16,3 +16,4 @@ ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
 
 
 Dimension of the building map is 20x15.
+
