--- a/test/docs/net/sf/freecol/common/model/_MapDocTest.testLatitude.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_MapDocTest.testLatitude.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_common_model_mapdoctest_testlatitude]
 = TestLatitude
@@ -46,3 +46,5 @@ With a map 1x91 and minimum latitude 0
 |map.getLatitude(90)|90
 |map.getRow(90)|90
 |====
+
+
