--- a/test/docs/net/sf/freecol/common/model/_MapDocTest.testNoPathAvailableDueToCampInTheWay.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_MapDocTest.testNoPathAvailableDueToCampInTheWay.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_common_model_mapdoctest_testnopathavailableduetocampintheway]
 = TestNoPathAvailableDueToCampInTheWay
@@ -12,6 +12,7 @@ The path from 1x11 to 3x7 is
 
 
 image:{ROOT_PATH}/images/testNoPathAvailableDueToCampInTheWay.jpg[]
-// Checksum testNoPathAvailableDueToCampInTheWay.jpg=3605557174
+// Checksum testNoPathAvailableDueToCampInTheWay.jpg=2023214642
 
 No path
+
