--- a/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles_Basic.approved.adoc
+++ b/test/docs/net/sf/freecol/common/model/_ColonyDocTest.testBuildQueueDoesNotAcceptBuildingDoubles_Basic.approved.adoc
@@ -8,17 +8,21 @@ Build queue does not accept building doubles.
 The queue size is incremented only with a new building.
 
 |====
-| Building asked | Queue size
+| Initial queue | Building asked | New queue
 
+a| 1
 a| model.building.warehouse
 a| 1
 
+a| 1
 a| model.building.warehouse
 a| 1
 
+a| 1
 a| model.building.church
 a| 2
 
+a| 2
 a| model.building.warehouse
 a| 2
 |====
